@@ -21,6 +21,7 @@ Version 1.7.0+svn:
    * Add a blur precommit function to the canvas
    * Improved the redraw algoritm and added more asserts
    * Objectives now use pango markup
+   * Replace the campaign dialog with a new gui one (debian bug #497655)
  * WML Engine:
    * Made new turn, turn X, side turn and turn refresh events synchronous.
      (bug #10603)
